# BiliNote-CLI

./: .gitignore  AGENT.md  BiliNote.shortcut  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  TODO.md  pyproject.toml  test_subtitle_vs_transcript.py  批处理设计方案.md  架构.md
AI 聊天记录/: 精简输出方案.md  精简输出方案最终版.md
dev-docs/: 分块.md  历史记录和重试服务设计.md  发布到 githubTODO.md  命名方式.md  指令和参数.md
skills（施工中 unfinished）/bilinote/: SKILL.md
skills（施工中 unfinished）/bilinote/evals/: evals.json
src/: cli.py  ffmpeg_helper.py
src/app/: config_manager.py  secret_manager.py
src/app/decorators/: timeit.py
src/app/downloaders/: bilibili_downloader.py  douyin_downloader.py  kuaishou_downloader.py  youtube_downloader.py
src/app/downloaders/kuaishou_helper/: kuaishou.py
src/app/gpt/: prompt.py  prompt_builder.py  request_chunker.py  universal_gpt.py
src/app/gpt/provider/: OpenAI_compatible_provider.py
src/app/models/: pipeline_model.py  process_config.py
src/app/services/: batch_processor.py  constant.py  note.py  postprocessing.py  searcher.py  serial_executor.py
src/app/services/cache/: task_cache.py
src/app/services/pipeline/: ai_processor.py  preparer.py
src/app/transcriber/: bcut.py  groq.py  kuaishou.py  mlx_whisper.py  transcriber_provider.py  whisper.py  whisper_cpp.py
src/app/utils/: cookie_helper.py  file_cleanup.py  logger.py  path_helper.py  url_parser.py  video_helper.py  video_reader.py
src/config/: config.yaml.example  dev_config.json  model_config_manager.py  models.json  transcriber.json
tests/: conftest.py
tests/integration/: test_transcriber_integration.py
tests/unit/downloaders/: test_bilibili_downloader.py  test_cookie_helper.py  test_douyin_downloader.py  test_kuaishou_downloader.py
tests/unit/gpt/: test_request_chunker.py  test_universal_gpt_checkpoint.py
tests/unit/services/: test_searcher.py  test_task_serial_executor.py
tests/unit/transcriber/: test_transcriber_fallback.py
tests/unit/utils/: test_env_checker.py  test_note_helper.py  test_path_helper.py  test_screenshot_marker.py  test_url_parser.py  test_video_helper.py  test_video_reader_dedupe.py
