[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bilinote-cli"
version = "0.1.0"
description = "AI 视频笔记生成 CLI 工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python>=17.4.1",
    "browser-cookie3>=0.20.1",
    "ffmpeg-python>=0.2.0",
    "gmssl>=3.2.2",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
bilinote = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
]

[tool.deptry.per_rule_ignores]
DEP001 = ["app", "config"]
